# (c) Meta Platforms, Inc. and affiliates. Confidential and proprietary.

cmake_minimum_required(VERSION 3.26)

add_subdirectory(base/testbase)
add_subdirectory(cv/testcv)
add_subdirectory(devices/testdevices)
add_subdirectory(geometry/testgeometry)
add_subdirectory(io/testio)
add_subdirectory(math/testmath)
add_subdirectory(media/testmedia)
add_subdirectory(platform/testplatform)
add_subdirectory(tracking/testtracking)
