# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

cmake_minimum_required(VERSION 3.26)

add_subdirectory(base/testbase)
add_subdirectory(cv/testcv)
add_subdirectory(devices/testdevices)
add_subdirectory(geometry/testgeometry)
add_subdirectory(io/testio)
add_subdirectory(math/testmath)
add_subdirectory(media/testmedia)
add_subdirectory(network/testnetwork)
add_subdirectory(platform/testplatform)
add_subdirectory(rendering/testrendering)
add_subdirectory(testocean)
add_subdirectory(tracking/testtracking)
